# collection_framework

./: README.md  requirements.txt
packaging_tutorial/: README.md  pyproject.toml
packaging_tutorial/src/collect_framework_FEDONYUK_ANATOLIY/: collect_framework.py  coverage.txt  dzen.txt
packaging_tutorial/tests/: cli_collect_test.py  collect_test.py
