[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "collect_framework_FEDONYUK_ANATOLIY"
version = "1.0"
authors = [
  { name="Fedonyuk Anatoliy", email="dekorstyle0@gmail.com" },
]
description = "This package counts the number of unique characters passed to a text or file!"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Anatoliy-Fedonyuk/collection_framework/tree/master"
"Bug Tracker" = "https://github.com/Anatoliy-Fedonyuk/collection_framework/issues"